<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BoletimActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="450dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="#000"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/fundo_item">

                <TextView
                    android:id="@+id/txtText"
                    style="@style/boletim_epidemiologico"
                    android:layout_width="220dp"
                    android:layout_height="59dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/boletim"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="73dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="12dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintStart_toEndOf="@+id/txtText"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/viewData"
                    android:layout_width="81dp"
                    android:layout_height="31dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintStart_toEndOf="@+id/txtText"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtdata"
                    style="@style/data"
                    android:layout_width="82dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="12dp"
                    android:background="@drawable/fundo_data"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@+id/txtText"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="19/04/2020" />

                <TextView
                    android:id="@+id/text_confirmados"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="27dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtText"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView3"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/casos_confirmados"
                    app:layout_constraintStart_toEndOf="@+id/text_confirmados"
                    app:layout_constraintTop_toBottomOf="@+id/txtText"
                    tools:text="Casos\nConfirmados" />

                <TextView
                    android:id="@+id/txt_descartados"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="73dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_confirmados"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="64dp"
                    android:text="@string/casos_descartados"
                    app:layout_constraintStart_toEndOf="@+id/txt_descartados"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:text="@string/casos_descartados" />

                <TextView
                    android:id="@+id/txt_Suspeitos"
                    style="@style/textos"
                    android:layout_width="34dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="168dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/casos"
                    android:layout_width="105dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="82dp"
                    android:text="@string/casos_suspeitos"
                    app:layout_constraintStart_toEndOf="@+id/txt_Suspeitos"
                    app:layout_constraintTop_toBottomOf="@+id/txtText" />

                <TextView
                    android:id="@+id/txt_curados"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="168dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="80dp"
                    android:text="@string/casos_curados"
                    app:layout_constraintStart_toEndOf="@+id/txt_curados"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/txt_monitorados"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="65dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:text="100" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/casos_monitorados"
                    app:layout_constraintStart_toEndOf="@+id/txt_monitorados"
                    app:layout_constraintTop_toBottomOf="@+id/txt_curados" />

                <TextView
                    android:id="@+id/txt_hora"
                    style="@style/hora"
                    android:layout_width="32dp"
                    android:layout_height="12dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/viewData"
                    app:layout_constraintTop_toTopOf="@+id/viewData"
                    tools:text="17:45" />

                <TextView
                    android:id="@+id/txt_iso_domiciliar"
                    style="@style/isolamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_confirmados"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/isolamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/iso_domiciliar"
                    app:layout_constraintStart_toEndOf="@+id/txt_iso_domiciliar"
                    app:layout_constraintTop_toBottomOf="@+id/text_confirmados" />

                <TextView
                    android:id="@+id/txt_iso_hospitalar"
                    style="@style/isolamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_iso_domiciliar"
                    tools:text="10" />

                <TextView
                    style="@style/isolamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/iso_hospitalar"
                    app:layout_constraintStart_toEndOf="@+id/txt_iso_hospitalar"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <TextView
                    android:id="@+id/txt_mortes"
                    style="@style/textos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="168dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    tools:text="10" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/casos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="75dp"
                    app:layout_constraintStart_toEndOf="@+id/txt_mortes"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    tools:text="@string/mortes" />

                refeitura

                <ImageView
                    android:id="@+id/img_prefeitura"
                    android:layout_width="30dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="64dp"
                    android:contentDescription="@string/logo_prefeitura"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    app:srcCompat="@drawable/logo_prefeitura" />

                <TextView
                    android:id="@+id/textView16"
                    style="@style/torres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:text="@string/torres"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView17" />

                <TextView
                    android:id="@+id/textView17"
                    style="@style/prefeitura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/prefeitura"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_mortes" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>