<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="10dp"
    android:background="@color/cardview_dark_background">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/fundo_item">

            <TextView
                android:id="@+id/txt_confirmados"
                style="@style/textos"
                android:layout_width="38dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                tools:text="10"
                app:layout_constraintStart_toEndOf="@+id/txtConfir"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtData"
                style="@style/textos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtdate"
                app:layout_constraintTop_toBottomOf="@+id/txtDescart"
                tools:text="18/04/2020" />

            <TextView
                android:id="@+id/txtDescartados"
                style="@style/textos"
                android:layout_width="34dp"
                android:layout_height="32dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toEndOf="@+id/txtDescart"
                app:layout_constraintTop_toBottomOf="@+id/txt_confirmados"
                tools:text="44" />

            <TextView
                android:id="@+id/txtdate"
                style="@style/textos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDescart" />

            <TextView
                android:id="@+id/txtConfir"
                style="@style/textos"
                android:layout_width="175dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/confir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDescart"
                style="@style/textos"
                android:layout_width="168dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/descart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtConfir" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>